--- a/ci/index.html
+++ b/ci/index.html
@@ -30,11 +30,11 @@
 <object type="text/html" data="artifacts/scorecard.html"></object>
 <hr>
 
-<h1>Batch</h1>
+<h1>Cloudtools</h1>
 <object type="text/html" data="artifacts/cloudtools.html"></object>
 <hr>
 
-<h1>Batch</h1>
+<h1>Upload</h1>
 <object type="text/html" data="artifacts/upload.html"></object>
 <hr>
 </body>
